--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,9 @@ body {
 header {
     padding: 20px 35px;
     background-color: var(--tertiary-color);
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 header h1 {
@@ -30,7 +33,7 @@ header h1 {
     font-size: 36px;
     color: var(--primary-color);
     margin: 0;
-    display: inline;
+    /*--display: inline;--[added display: flex; to header] --*/
 }
 
 header a {
@@ -40,7 +43,7 @@ header a {
 
 /* Apply Style to navbar */
 header nav {
-    float: right;
+    /*--float: right;--[added display: flex; to header] --*/
     margin: 7px 0;
 }
 
