--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,42 +277,48 @@ section {
 
 /*-- Meet The Trainers Section Style Starts --*/
 .trainers {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     /*--text-align: center;--*/
 }
 
 .trainer {
-    width: 900px;
-    margin: 0 auto 30px auto;
+    margin: 0 auto 20px auto;
     background: var(--secondary-color);
     color: var(--primary-color);
-    overflow: auto;
+    flex: 1;
+    /*--width: 900px;
+    overflow: auto;--*/
 }
 
 .trainer img {
-    width: 35%;
-    float: left;
+    width: 100%;
+    /*--float: left;--*/
 }
 
 .trainer-bio {
-    padding: 35px;
-    float: left;
-    width: 65%;
+    padding: 25px;
+    /*--float: left;
+    width: 65%;--*/
+    line-height: 1.3;
 }
 
 .trainer-bio h3 {
-    font-size: 32px;
-    margin-bottom: 8px;
+    font-size: 28px;
+    /*--margin-bottom: 8px;--*/
 }
 
 .trainer-bio h4 {
     font-weight: lighter;
-    font-size: 26px;
-    margin-bottom: 25px;
+    font-size: 22px;
+    margin-bottom: 15px;
 }
 
 .trainer-bio p {
     font-size: 17px;
-    line-height: 1.3;
 }
 
 .text-left {
