Add depth to the page with CSS shadows, rounded corners, and transparency.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,14 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url('../images/hero-bg.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 
 header h1 {
@@ -33,6 +41,7 @@ header h1 {
     font-size: 36px;
     color: var(--primary-color);
     margin: 0;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     /*--display: inline;--[added display: flex; to header] --*/
 }
 
@@ -66,7 +75,15 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     /*-- change font-size:22px to 1.55fvw - because of flexbox --*/
+}
+
+header nav ul li a:hover {
+    background: var(--primary-color);
+    color: var(--secondary-color);
+    border-radius: 15px;
+    text-shadow: none;
 }
 
 /* Hero Style Start */
@@ -78,6 +95,8 @@ header nav ul li a {
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
+    background-attachment: fixed;
+    background-position: 80%;
    /*--height: 600px;
     position: relative;--because of flex*/
 }
@@ -96,6 +115,7 @@ header nav ul li a {
     font-style: italic;
     font-size: 55px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
   /*-- end of CTA --*/
 
@@ -107,6 +127,8 @@ header nav ul li a {
     color: var(--secondary-color);
     width: 100%;
     margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
     /*--width: 500px;
     position: absolute;
     bottom: 120px;
@@ -131,7 +153,14 @@ header nav ul li a {
     color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 15px;
+    background-color: rgba(255,255,255, 0.75);
 }
+
+.form-input:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
+  }
 
 .hero-form label {
     margin: 0 5px;
@@ -143,7 +172,12 @@ header nav ul li a {
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+    border-radius: 15px;
 }
+
+.hero-form button:hover {
+    background-color: var(--tertiary-color);  
+  }
 
 /*-- All Main Section Style Starts --*/
 section {
@@ -211,13 +245,26 @@ section {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
+    /*--border-bottom: 1px solid var(--tertiary-color);--*/
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
   }
 
+  /*--we could combine :last-child with another pseudo-class, :not, to check for the inverse of that being true. This would look something like the following--*/
+  .step:not(:last-child) {
+    border-bottom: 1px solid var(--tertiary-color);
+  }
+/*--
+  .step:last-child {
+    border-bottom: 1px solid var(--tertiary-color);
+  }
+
+  .step:nth-child(even) {
+    border-bottom: 1px solid var(--tertiary-color);
+  }
+--*/
 .steps {
 
     /*--text-align: center;--*/
@@ -409,6 +456,14 @@ section {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius: 15px;
+    background-color: rgba(255,255,255, 0.75);
+}
+
+.contact-form input:focus,
+.contact-form textarea:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
 }
 
 .contact-form button {
@@ -419,6 +474,12 @@ section {
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 15px;
+}
+
+.contact-form button:hover {
+    color: var(--primary-color);
+    background: var(--tertiary-color);
 }
 
 /* Apply Style to footer */
@@ -429,6 +490,9 @@ footer {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    bottom: 0;
 }
 
 footer h2 {
@@ -452,6 +516,7 @@ footer a {
     header {
       padding-bottom: 0;
       justify-content: center;
+      position: relative;
     }
   
     header h1 {
